--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -24,6 +24,12 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>你的操作需要访问相机权限</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>你的操作需要访问录像机权限</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>你的操作需要访问照片库权限</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
