--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,13 +6,13 @@ module:
   androidX: true
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: ">=2.17.0 <3.0.0"
   flutter: ">=3.3.1"
 
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: ^0.8.5+3
+  # image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
