--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,27 +6,19 @@ module:
   androidX: true
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
-  flutter: ">=3.3.1"
+  sdk: ">=2.18.5 <3.0.0"
+  flutter: ">=3.3.10"
 
 dependencies:
   flutter:
     sdk: flutter
-  # image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  very_good_analysis: ^3.1.0  
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The androidPackage and pluginClass identifiers should not ordinarily
-  # be modified. They are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
   plugin:
     platforms:
       android:
@@ -35,27 +27,12 @@ flutter:
       ios:
         pluginClass: FlutterQrReaderPlugin
 
-  # To add assets to your plugin package, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
   assets:
     - assets/tool_img.png
     - assets/tool_qrcode.png
     - assets/tool_flashlight_close.png
     - assets/tool_flashlight_open.png
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
 
-  # To add custom fonts to your plugin package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -67,6 +44,3 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
