--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,7 +20,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter 
+  test: ^1.21.4   
   very_good_analysis: ^3.1.0
+  rxdart: ^0.27.7
 
 flutter:
   uses-material-design: true
