--- a/.github/workflows/example_build_ios.yml
+++ b/.github/workflows/example_build_ios.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [master]
 
+env:
+  FLUTTER_VERSION: "3.3.10"
+  EXAMPLE_DIRECTORY: /example      
+
 jobs:
   build_ios:
     runs-on: macos-12
@@ -13,13 +17,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.3.10"
+          flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: "stable"
           architecture: x64
       - run: flutter doctor
       - run: flutter pub get
 
-      - run: cd example
-      - run: flutter pub get
-
-      - run: flutter build ios --release --no-codesign
+      - name: flutter build ios
+        working-directory: ${{ env.EXAMPLE_DIRECTORY }}
+        run: flutter build ios --release --no-codesign
