--- a/.github/workflows/example_android_integration_test.yml
+++ b/.github/workflows/example_android_integration_test.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [master]
 
+env:
+  FLUTTER_VERSION: "3.3.10"
+  EXAMPLE_DIRECTORY: /example
+
 jobs:
   integration_test_android:
     runs-on: macos-12
@@ -13,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.3.10"
+          flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: stable
       - uses: actions/setup-java@v3
         with:
@@ -22,13 +26,16 @@ jobs:
           cache: gradle
       - run: flutter doctor -v
       - run: flutter pub get
-      - run: cd example
-      
+
       - uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
           arch: x86_64
-          script: flutter drive --target=test_driver/app.dart
+
+      - name: run integration test
+        working-directory: ${{ env.EXAMPLE_DIRECTORY }}
+        run: flutter drive --target=test_driver/app.dart
+
       - uses: actions/upload-artifact@v3
         if: always()
         with:
