--- a/.github/workflows/example_build_android.yml
+++ b/.github/workflows/example_build_android.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [master]
 
+env:
+  FLUTTER_VERSION: "3.3.10"
+  EXAMPLE_DIRECTORY: /example    
+
 jobs:
   build_android:
     runs-on: ubuntu-20.04
@@ -18,13 +22,15 @@ jobs:
           cache: gradle
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.3.10"
+          flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: "stable"
       - run: flutter doctor
       - run: flutter pub get
 
-      - run: cd example
-      - run: flutter pub get
+      - name: build apk appbundle
+        working-directory: ${{ env.EXAMPLE_DIRECTORY }}
+        run: flutter build apk 
 
-      - run: flutter build apk
-      - run: flutter build appbundle
+      - name: build apk appbundle
+        working-directory: ${{ env.EXAMPLE_DIRECTORY }}
+        run: flutter build appbundle   
