--- a/.github/workflows/example_ios_integration_test.yml
+++ b/.github/workflows/example_ios_integration_test.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [master]
 
+env:
+  FLUTTER_VERSION: "3.3.10"
+  EXAMPLE_DIRECTORY: /example
+
 jobs:
   integration_test_ios:
     runs-on: macos-12
@@ -13,17 +17,19 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.3.10"
+          flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: stable
       - run: flutter doctor -v
       - run: flutter pub get
-      - run: cd example
-      
       - uses: futureware-tech/simulator-action@v2
         with:
           model: "iPhone 14"
           os_version: "16.0"
-      - run: flutter drive --target=test_driver/app.dart
+
+      - name: run integration test
+        working-directory: ${{ env.EXAMPLE_DIRECTORY }}
+        run: flutter drive --target=test_driver/app.dart
+
       - uses: actions/upload-artifact@v3
         if: always()
         with:
