--- a/.github/workflows/example_unit_test.yml
+++ b/.github/workflows/example_unit_test.yml
@@ -1,10 +1,14 @@
-name: Analyze code and Unit test
+name: Example Analyze code and Unit test
 
 on:
   push:
     branches: [master]
   pull_request:
     branches: [master]
+
+env:
+  FLUTTER_VERSION: "3.3.10"
+  EXAMPLE_DIRECTORY: /example    
 
 jobs:
   flutter_test:
@@ -14,18 +18,18 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.3.10"
+          flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: "stable"
       - run: flutter doctor
 
-      - name: get folder example
-        run: cd example 
-
       - name: "Check fmt"
-        run: flutter format . --line-length 120 --set-exit-if-changed
+        working-directory: ${{ env.EXAMPLE_DIRECTORY }}
+        run: flutter pub get && flutter format . --line-length 120 --set-exit-if-changed
 
       - name: "Analyze Code"
-        run: flutter pub get && flutter analyze  --fatal-warnings
+        working-directory: ${{ env.EXAMPLE_DIRECTORY }}
+        run: flutter analyze  --fatal-warnings
 
       - name: "Run unit tests"
+        working-directory: ${{ env.EXAMPLE_DIRECTORY }}
         run: flutter test
