--- a/.github/workflows/example_build_ios.yml
+++ b/.github/workflows/example_build_ios.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   FLUTTER_VERSION: "3.3.10"
-  EXAMPLE_DIRECTORY: /example      
+  EXAMPLE_DIRECTORY: example      
 
 jobs:
   build_ios:
