--- a/.github/workflows/example_android_integration_test.yml
+++ b/.github/workflows/example_android_integration_test.yml
@@ -9,6 +9,7 @@ on:
 env:
   FLUTTER_VERSION: "3.3.10"
   EXAMPLE_DIRECTORY: example
+  ARTIFACT_PATH: ./example/screenshots/*
 
 jobs:
   integration_test_android:
@@ -37,4 +38,4 @@ jobs:
         if: always()
         with:
           name: my-artifact
-          path: ./example/screenshots/*
+          path: ${{ env.ARTIFACT_PATH }}
