--- a/.github/workflows/example_ios_integration_test.yml
+++ b/.github/workflows/example_ios_integration_test.yml
@@ -9,6 +9,7 @@ on:
 env:
   FLUTTER_VERSION: "3.3.10"
   EXAMPLE_DIRECTORY: example
+  ARTIFACT_PATH: ./example/screenshots/*
 
 jobs:
   integration_test_ios:
@@ -34,4 +35,4 @@ jobs:
         if: always()
         with:
           name: my-artifact
-          path: ./screenshots/*
+          path: ${{ env.ARTIFACT_PATH }}
