--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,14 +6,15 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.18.5 <3.0.0"
+  sdk: ">=3.6.0 <4.0.0"
+  flutter: "3.35.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  permission_handler: ^10.0.0
+  permission_handler: ^12.0.1
   flutter_qr_scan:
     path: ../
 
@@ -22,9 +23,9 @@ dev_dependencies:
     sdk: flutter
   flutter_driver:
     sdk: flutter 
-  test: ^1.21.4   
-  very_good_analysis: ^3.1.0
-  rxdart: ^0.27.7
+  test: ^1.26.2
+  very_good_analysis: ^10.0.0
+  rxdart: ^0.28.0
 
 flutter:
   uses-material-design: true
