--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,8 @@ module:
   androidX: true
 
 environment:
-  sdk: ">=2.18.5 <3.0.0"
-  flutter: ">=3.3.10"
+  sdk: ">=3.6.0 <4.0.0"
+  flutter: "3.35.0"
 
 dependencies:
   flutter:
@@ -16,7 +16,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^3.1.0  
+  very_good_analysis: ^10.0.0
 
 flutter:
   plugin:
@@ -32,15 +32,3 @@ flutter:
     - assets/tool_qrcode.png
     - assets/tool_flashlight_close.png
     - assets/tool_flashlight_open.png
-
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
