--- a/.github/workflows/example_android_integration_test.yml
+++ b/.github/workflows/example_android_integration_test.yml
@@ -13,20 +13,28 @@ env:
 
 jobs:
   integration_test_android:
-    runs-on: macos-12
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: stable
+
       - uses: actions/setup-java@v3
         with:
           java-version: "11"
           distribution: "temurin"
           cache: gradle
+
       - run: flutter doctor -v
       - run: flutter pub get
+
+      - name: Enable KVM group perms
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
 
       - uses: reactivecircus/android-emulator-runner@v2
         with:
