--- a/.github/workflows/example_build_android.yml
+++ b/.github/workflows/example_build_android.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build_android:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
