--- a/.github/workflows/example_build_android.yml
+++ b/.github/workflows/example_build_android.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   FLUTTER_VERSION: "3.35.0"
-  EXAMPLE_DIRECTORY: example    
+  EXAMPLE_DIRECTORY: example_app
 
 jobs:
   build_android:
