--- a/.github/workflows/example_ios_integration_test.yml
+++ b/.github/workflows/example_ios_integration_test.yml
@@ -24,7 +24,7 @@ jobs:
       - run: flutter pub get
       - uses: futureware-tech/simulator-action@v2
         with:
-          model: "iPhone 14iPhone 14 Pro Max"
+          model: "iPhone 15 Pro"
           os_version: "17.2"
 
       - name: run integration test
