--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -1,4 +1,4 @@
-name: Flutter Qr Reader Analyze code and Unit test
+name: Example Analyze code and Unit test
 
 on:
   push:
@@ -8,24 +8,23 @@ on:
 
 env:
   FLUTTER_VERSION: "3.35.0"
+  EXAMPLE_DIRECTORY: example_app
 
 jobs:
   flutter_test:
     name: Analyze code and Unit test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
           channel: "stable"
       - run: flutter doctor
 
-      - name: "Check fmt"
-        run: flutter pub get && dart format . --line-length 120 --set-exit-if-changed
-
-      - name: "Analyze Code"
-        run: flutter analyze  --fatal-warnings
-
       - name: "Run unit tests"
-        run: flutter test 
+        run: flutter test
+
+      - name: "Run example app unit tests"
+        working-directory: ${{ env.EXAMPLE_DIRECTORY }}
+        run: flutter test
