--- a/.github/workflows/example_build_android.yml
+++ b/.github/workflows/example_build_android.yml
@@ -7,7 +7,6 @@ on:
     branches: [master]
 
 env:
-  FLUTTER_VERSION: "3.35.0"
   EXAMPLE_DIRECTORY: example_app
 
 jobs:
@@ -23,7 +22,7 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
+          flutter-version-file: pubspec.yaml
           channel: "stable"
       - run: flutter doctor
       - run: flutter pub get
