--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -7,7 +7,6 @@ on:
     branches: [master]
 
 env:
-  FLUTTER_VERSION: "3.35.0"
   EXAMPLE_DIRECTORY: example_app
 
 jobs:
@@ -18,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
+          flutter-version-file: pubspec.yaml
           channel: "stable"
       - run: flutter doctor
 
