--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -1,4 +1,4 @@
-name:  Unit test
+name: Flutter test
 
 on:
   push:
@@ -11,7 +11,7 @@ env:
 
 jobs:
   flutter_test:
-    name: Analyze code and Unit test
+    name: Flutter test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
